--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -4,6 +4,8 @@
     padding: 0px;
     list-style: none;
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1px;
 }
 html {
     scroll-behavior: smooth;
@@ -19,12 +21,12 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background-color: #040819;
+    background-color: #071304;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #00acff;
+    background: rgb(7,19,4);
 }
 /* Animation CSS */
 @keyframes bottomReveal {
@@ -59,4 +61,25 @@ html {
 .container{
     margin: auto;
     max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.nav-container, .nav-links{
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+.nav-container{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.nav-container .logo img{
+    width: 240px;
+}
+.nav-links a{
+    padding: 10px;
+    color: #0d3814;
+}
+.nav-links a:hover{
+    color: #97b051;
 }
