--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -215,3 +215,37 @@ text-align: center;
 .breath-card-info p{
     color: #000000;
 }
+
+.musketeers{
+    background-image: linear-gradient( 30deg, #36710b 40%, #000300);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: fit-content;
+    width: 100%;
+    padding: 40px 0px;
+}
+.musketeers-container{
+    text-align: center;
+}
+.musketeers-container h1{
+    font-size: 60px;
+    font-weight: 800;
+    color: #8bc540;
+    text-align: center;
+}
+.musketeers-container h1.thinned{
+    font-weight: 300 !important;
+}
+.musketeers-container p{
+    font-size: 24px;
+    font-weight: 400;
+    color: #ffffff;
+    text-align: center;
+    line-height: 40px;
+    margin: 20px 20px;
+    width: 100%;
+}
+.musketeers-container img.circles{
+    margin: 20px auto !important;
+    width: 70%;
+}
