--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0px;
     box-sizing: border-box;
     padding: 0px;
@@ -7,6 +7,7 @@
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
 }
+
 html {
     scroll-behavior: smooth;
     margin: 0 !important;
@@ -26,82 +27,98 @@ html {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgb(7,19,4);
+    background: rgb(7, 19, 4);
 }
+
 /* Animation CSS */
 @keyframes bottomReveal {
-    from{
+    from {
         transform: translateY(50px);
         opacity: 0;
     }
-    to{
+
+    to {
         transform: translateY(0);
         opacity: 1;
     }
 }
-.reveal-fixed{
+
+.reveal-fixed {
     transition: 2s all ease;
     animation: bottomReveal 2000ms forwards;
 }
-.reveal-fixed-delay{
+
+.reveal-fixed-delay {
     transition: 2s all ease;
     animation: bottomReveal 1200ms forwards;
 }
-.reveal{
+
+.reveal {
     position: relative;
     transform: translateY(50px);
     opacity: 0;
     transition: 2s all ease;
 }
-.reveal.showreveal{
+
+.reveal.showreveal {
     transform: translateY(0);
     opacity: 1;
 }
+
 /* == || SCROLL BAR == */
-.container{
+.container {
     margin: auto;
     max-width: 1280px;
     padding-left: 15px;
     padding-right: 15px;
 }
-.nav-container, .nav-links{
+
+.nav-container,
+.nav-links {
     display: flex;
     align-items: center;
     justify-content: space-between
 }
-.nav-container{
+
+.nav-container {
     padding-top: 30px;
     padding-bottom: 40px;
 }
-.nav-container .logo img{
+
+.nav-container .logo img {
     width: 240px;
 }
-.nav-links a{
+
+.nav-links a {
     padding: 10px;
     color: #0d3814;
 }
-.nav-links a:hover{
+
+.nav-links a:hover {
     color: #97b051;
 }
 
-.banner{
-    background-image: linear-gradient( 140deg, #000300 70%, #36710b);
+.banner {
+    background-image: linear-gradient(140deg, #000300 70%, #36710b);
     background-size: cover;
     background-repeat: no-repeat;
     height: fit-content;
     width: 100%;
 }
-.banner-container{
+
+.banner-container {
     padding-top: 120px;
     text-align: center;
 }
-.banner-container h1{
+
+.banner-container h1 {
     font-size: 60px;
     font-weight: 800;
     color: #8bc540;
     text-align: center;
 }
-.banner-container p{
+
+.banner-container p {
     font-size: 26px;
     font-weight: 500;
     color: #ffffff;
@@ -110,24 +127,29 @@ html {
     margin: 20px auto;
     width: 100%;
 }
-.banner-container img{
+
+.banner-container img {
     margin: auto;
     width: 500px;
     vertical-align: middle;
 }
-.our-story{
+
+.our-story {
     padding: 60px 0px;
 }
-.our-stry-container{
+
+.our-stry-container {
     text-align: center;
 }
-.our-stry-container h1{
+
+.our-stry-container h1 {
     font-size: 60px;
     font-weight: 800;
     color: #004316;
     text-align: center;
 }
-.our-stry-container p{
+
+.our-stry-container p {
     font-size: 26px;
     font-weight: 400;
     color: #000000;
@@ -136,19 +158,23 @@ html {
     margin: 20px auto;
     width: 100%;
 }
-.our-stry-container img{
+
+.our-stry-container img {
     width: 100%;
 }
-.cards{
+
+.cards {
     padding: 40px 0px;
     background-color: #e6e6e6;
 }
-.cards-container{
+
+.cards-container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.cards-container .card{
+
+.cards-container .card {
     width: 280px;
     margin: 5px;
     background-color: #ffffff;
@@ -157,23 +183,29 @@ html {
     border-bottom-right-radius: 14px;
     min-height: 520px;
     overflow: hidden;
-}font-size: 60px;
+}
+
+font-size: 60px;
 font-weight: 800;
 color: #8bc540;
 text-align: center;
-.cards-container .card .card-info{
+
+.cards-container .card .card-info {
     padding: 20px;
 }
-.cards-container .card .card-info h3{
+
+.cards-container .card .card-info h3 {
     font-size: 18px;
     color: #004316;
     margin: 10px 0font-size: 60px;
     font-weight: 800;
     color: #8bc540;
-    text-align: center;nter;
+    text-align: center;
+    nter;
     line-height: 26px;
 }
-.cards-container .card .card-info p{
+
+.cards-container .card .card-info p {
     font-weight: 400;
     font-size: 18px;
     color: #000000;
@@ -181,62 +213,73 @@ text-align: center;
     text-align: center;
     line-height: 28px;
 }
-.breath{
+
+.breath {
     padding: 40px;
     background-color: #ffffff;
 }
-.breath-container h1{
+
+.breath-container h1 {
     font-size: 60px;
     font-weight: 300;
     color: #071304;
     text-align: center;
 }
-.breath-cards{
+
+.breath-cards {
     display: flex;
     align-items: flex-start;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
-.breath-card{
+
+.breath-card {
     width: 280px;
     text-align: center;
     margin: 18px 10px;
 }
-.breath-card .icon{
+
+.breath-card .icon {
     height: 80px;
     width: 80px;
     border-radius: 40px;
     background-color: #8bc540;
     margin: 0px auto 20px;
 }
-.breath-card-info h2{
+
+.breath-card-info h2 {
     color: #8bc540;
 }
-.breath-card-info p{
+
+.breath-card-info p {
     color: #000000;
 }
 
-.musketeers{
-    background-image: linear-gradient( 30deg, #36710b 40%, #000300);
+.musketeers {
+    background-image: linear-gradient(30deg, #36710b 40%, #000300);
     background-size: cover;
     background-repeat: no-repeat;
     height: fit-content;
     width: 100%;
     padding: 40px 0px;
 }
-.musketeers-container{
+
+.musketeers-container {
     text-align: center;
 }
-.musketeers-container h1{
+
+.musketeers-container h1 {
     font-size: 60px;
     font-weight: 800;
     color: #8bc540;
     text-align: center;
 }
-.musketeers-container h1.thinned{
+
+.musketeers-container h1.thinned {
     font-weight: 300 !important;
 }
-.musketeers-container p{
+
+.musketeers-container p {
     font-size: 24px;
     font-weight: 400;
     color: #ffffff;
@@ -245,7 +288,84 @@ text-align: center;
     margin: 20px 20px;
     width: 100%;
 }
-.musketeers-container img.circles{
+
+.musketeers-container img.circles {
     margin: 20px auto !important;
     width: 70%;
+}
+
+.musketeers-cards {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.musketeers-card {
+    width: 280px;
+    margin: 20px 20px;
+    text-align: center;
+}
+
+.musketeers-card .image {
+    height: 160px;
+    width: 160px;
+    border-radius: 80px;
+    background-color: #ffffff;
+    margin: 0px auto 20px;
+}
+
+.musketeer-card-info h3 {
+    font-size: 22px;
+    font-weight: 800;
+    color: #ffffff;
+    margin: 10px;
+}
+
+.musketeer-card-info span {
+    color: #ffffff;
+}
+
+.musketeer-card-info p {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: normal !important;
+}
+
+.partners {
+    padding: 40px 0px;
+}
+
+.partners-container {
+    text-align: center;
+}
+
+.partners-container h1 {
+    font-size: 60px;
+    font-weight: 800;
+    color: #004316;
+    text-align: center;
+}
+
+.partners-container p {
+    font-size: 26px;
+    font-weight: 400;
+    color: #000000;
+    text-align: center;
+    line-height: 44px;
+    margin: 20px auto;
+    width: 100%;
+}
+.partners{
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.partner{
+    width: 200px;
+    margin: 15px;
+}
+.partner img{
+    width: 100%;
 }
