--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -369,3 +369,65 @@ text-align: center;
 .partner img{
     width: 100%;
 }
+footer{
+    background-color: #004316;
+}
+.top-foot{
+    padding: 30px 0px;
+    border-bottom: 2px solid #ffffff;
+}
+.top-foot, social-icons.ft{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.social-media.ft{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-foot{
+    text-align: center;
+}
+.middle-foot h1{
+    font-weight: 800;
+    color: #8bc540;
+    font-size: 50px;
+    margin: 40px 0px;
+    text-align: center;
+}
+.middle-foot p{
+    font-weight: 300;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 26px;
+    width: 100%;
+    max-width: 800px;
+    margin: 10px auto 20px;
+    text-align: center;
+}.bottom-foot{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.footer-copyright{
+    padding: 30px 0px 50px;
+}
+.footer-copyright, .ft-logo, .ft-links {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;   
+}
+.ft-logo img{
+    width: 240px;
+}
+.ft-links{
+    margin: 0px 0px 0px 40px;
+}
+.ft-links a{
+    padding: 6px 10px;
+    color: #ffffff;
+}
+.copy-text{
+    color: #ffffff;
+}
