--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -408,6 +408,8 @@ footer{
 .top-foot{
     padding: 30px 0px;
     border-bottom: 2px solid #ffffff;
+    flex-wrap: wrap;
+    min-width: 300px;
 }
 .top-foot, .social-icons.ft{
     display: flex;
@@ -418,6 +420,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 10px 0px;
 }
 .social-media.ft span{
     color: #ffffff;
@@ -434,7 +437,10 @@ footer{
 }
 .top-foot-fm{
     display: flex;
-    align-items: center;justify-content: space-between;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 300px;
+    margin: 10px 0px;
 }
 .top-foot-fm .icon img{
     width: 34px;
@@ -482,15 +488,13 @@ footer{
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 30px 0px;
 }
 .bottom-foot .column.one,
 .bottom-foot .column.two{
     width: 280px;
-}
-.bottom-foot .column.three{
-    width: 560px;
-    text-align: center;
+    margin: 10px 0px;
 }
 .bottom-foot .column h3{
     color: #8bc540;
@@ -524,15 +528,24 @@ footer{
     padding: 0px;
     padding-left: 10px;  
 }
+.bottom-foot .column.three{
+    width: 560px;
+    text-align: center;
+    margin: 10px 0px;
+}
 .column.three .fm-ctrl{
     display: flex;
     align-items: center;
     justify-content: space-between;   
     flex-wrap: wrap
 }
+.column.three form{
+    width: 100%;
+}
 .column.three .fm-ctrl input{
     height: 40px;
-    width: 265px;
+    width: 100%;
+    min-width: 265px;
     outline: none;
     border: 0px;
     background-color: #ffffff;
@@ -549,7 +562,7 @@ footer{
     height: 100px;
     width: 100%;
     max-width: 550px;
-    min-width: 265px;
+    min-width: inherit;
     outline: none;
     border: 0px;
     font-size: 16px;
@@ -573,6 +586,8 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-between;   
+    flex-wrap: wrap;
+    margin: 10px 0px;
 }
 .ft-logo img{
     width: 240px;
@@ -586,4 +601,6 @@ footer{
 }
 .copy-text{
     color: #ffffff;
+    text-align: center;
+    width: fit-content;
 }
