--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -124,7 +124,8 @@ nav{
 .drop-arrow-scroll{
     position: absolute;
     bottom: -20px;
-    margin: auto;
+    left: 50%;
+      transform: translateX(-50%);
     height: 40px;
     width: 40px;
     border-radius: 20px;
@@ -133,6 +134,9 @@ nav{
     align-items: center;
     justify-content: center;
     font-size: 20px;
+}
+.drop-arrow-scroll img{
+    width: 24px;
 }
 .banner-container {
     padding-top: 120px;
@@ -531,6 +535,7 @@ footer{
 .bottom-foot .column ul li .text{
     color: #ffffff;
     font-size: 16px;
+    line-height: 24px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -579,6 +584,7 @@ footer{
     color: #0d3814;
     padding: 10px 10px;
     margin: 5px;
+    resize: none;
 }
 .column.three button{
     height: 50px;
@@ -714,6 +720,9 @@ footer{
     
     .partners-container p {
         font-size: 1.73rem;
+    }
+    .column.three .fm-ctrl input{
+        max-width: 265px !important;
     }
 }
 /* == || RESPONSIVE == */
