--- a/edgetech/css/style.css
+++ b/edgetech/css/style.css
@@ -680,8 +680,59 @@ footer{
         font-size: 3em;
     }
     
-    .partners-container p {
-        font-size: 1.33rem;
+    .musketeers-container p {
+        font-size: 16px;
+        font-weight: 400;
+        color: #ffffff;
+        text-align: justify;
+        line-height: 28px;
+        margin: 10px auto;
+        width: 100%;
+    }
+    .breath-card {
+        width: 100%;
+        text-align: center;
+    }
+    .breath-card-info h2 {
+        color: #8bc540;
+        font-weight: 800;
+        font-size: 22px;
+    }
+    
+    .breath-card-info p {
+        color: #000000;
+        line-height: 24px;
+        font-weight: 300;
+        text-align: justify;
+    }
+    .our-stry-container p {
+        font-size: 16px;
+        font-weight: 400;
+        color: #000000;
+        text-align: center;
+        line-height: 28px;
+        margin: 20px auto;
+        width: 100%;
+    }
+    .banner-container h1 {
+        font-size: 1.8rem;
+        font-weight: 800;
+        color: #8bc540;
+        text-align: center;
+    }
+    
+    .banner-container p {
+        font-size: 16px;
+        font-weight: 500;
+        color: #ffffff;
+        text-align: center;
+        line-height: 44px;
+        margin: 10px auto;
+        width: 100%;
+    }
+    .banner-container {
+        padding-top: 50px;
+        text-align: center;
     }
 }
 
